--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
     <!-- Add any necessary meta tags, stylesheets, or other head elements here -->
 </head>
 <body>
+    <!--Top Component-->
     <section class="mains" id="topComponent">
         <section class="twenty">
-            <img src="assets/img/component-01/Image-01.jpg">
+            <img class="modaled" id="modalOne" src="assets/img/component-01/Image-01.jpg">
         </section>
         <section class="twenty">
-            <img src="assets/img/component-01/Image-02.jpg">
-            <img src="assets/img/component-01/Image-03.jpg">
+            <img class="modaled" id="modalTwo" src="assets/img/component-01/Image-02.jpg">
+            <img class="modaled" id="modalThree" src="assets/img/component-01/Image-03.jpg">
         </section>
         <section class="twenty">
             <h1 class="topHeading">Answer Your Body's Needs</h1>
             <p>The way ingredients are sourced affects the way we nourish our bodies. Author Mark Schatzer believes our body naturally develops an appetite for the foods and nutrients it needs to be health, but the artificial flavourings are getting in the way. This can be reversed by focusing on high-quality ingredients and being mindful as your appetite guides you to consume according to your body's needs.</p>
-            <span class="red">BE MINDFUL</span>
+            <span class="red">Be Mindful</span>
             <p class="bold">Sourcing local or organic food is a good way to start being more mindful about what you're cooking and eating</p>
         </section>
     </section>
+    <!--End of Top Component-->
+    <!--Bottom Component-->
     <section class="mains" id="bottomComponent">
         <h1 class="centered">All the Latest from AEG</h1>
           <section class="blogPosts">
@@ -31,21 +34,29 @@
                 <img class="redLined" src="assets/img/component-02/Image-01.jpg">
                 <h3>Summer Lunch Menu By Mark Best</h3>
                 <p>AEG ambassador Mark Best's summmer eats are guaranteed to help you make the most of the warmer weather and entertaining at home.</p>
-                <span>Read More</span>  
+                <span class="readMore">Read More</span>  
             </section>
              <section class="twenty">
                 <img class="redLined" src="assets/img/component-02/Image-02.jpg">
                 <h3>A Traditional Christmas Eve, Mark Best Style</h3>
                 <p>One of Australia's best chefs and AEG ambassador, Mark Best, shares his favourite Christmas Eve menu which is sure to impress your guests.</p>
-                <span>Read More</span>
+                <span class="readMore">Read More</span>
             </section>
             <section class="twenty">
                 <img class="redLined" src="assets/img/component-02/Image-03.jpg">
                 <h3>Taking Taste Further</h3>
                 <p>This exclusive cookbook gives you all the know-how you need. We've designed it to make sure you get the most out of our products - and the best out of your food.</p>
-                <span>Read More</span>
+                <span class="readMore">Read More</span>
             </section>
           </section>
     </section>
+    <!--End of Bottom Component-->
+    <!--Modal Component-->
+    <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImg">
+      </div>
+    <!--End of Modal Component-->
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
