--- a/index.html
+++ b/index.html
@@ -4,47 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AEG: Discover Gourmet Nutrition</title>
+    <meta name="description" content="Answer your body's needs!">
+    <meta name="keywords" content="AEG, nutrition, gourmet, delicious, food, cookbook, recipe, food blog, blogs">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/site.webmanifest>
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="#">
+    <meta name="author" content="Nielzon Tolentino">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
-    <!-- Add any necessary meta tags, stylesheets, or other head elements here -->
 </head>
 <body>
     <!--Top Component-->
-    <section class="mains" id="topComponent">
-        <section class="twenty">
+    <section class="mainComponents" id="topComponent">
+        <section class="componentSections">
             <img class="modaled" id="modalOne" src="assets/img/component-01/Image-01.jpg">
         </section>
-        <section class="twenty">
+        <section class="componentSections">
             <img class="modaled" id="modalTwo" src="assets/img/component-01/Image-02.jpg">
             <img class="modaled" id="modalThree" src="assets/img/component-01/Image-03.jpg">
         </section>
-        <section class="twenty">
+        <section class="biggerText">
             <h1 class="topHeading">Answer Your Body's Needs</h1>
             <p>The way ingredients are sourced affects the way we nourish our bodies. Author Mark Schatzer believes our body naturally develops an appetite for the foods and nutrients it needs to be health, but the artificial flavourings are getting in the way. This can be reversed by focusing on high-quality ingredients and being mindful as your appetite guides you to consume according to your body's needs.</p>
-            <span class="red">Be Mindful</span>
+        </section>
+        <section class="smallerText">
+            <span class="redText">Be Mindful</span>
             <p class="bold">Sourcing local or organic food is a good way to start being more mindful about what you're cooking and eating</p>
         </section>
     </section>
     <!--End of Top Component-->
     <!--Bottom Component-->
-    <section class="mains" id="bottomComponent">
+    <section class="mainComponents" id="bottomComponent">
         <h1 class="centered">All the Latest from AEG</h1>
           <section class="blogPosts">
-            <section class="twenty">
-                <img class="redLined" src="assets/img/component-02/Image-01.jpg">
-                <h3>Summer Lunch Menu By Mark Best</h3>
+            <section class="componentSections">
+                <a href="#" rel="noopener noreferrer">
+                  <img class="redLined" id="clickListener" src="assets/img/component-02/Image-01.jpg">
+                </a>
+                <a href="#" target="_blank" rel="noopener noreferrer">
+                  <h3 id="clicked">Summer Lunch Menu By Mark Best</h3>
+                </a>
                 <p>AEG ambassador Mark Best's summmer eats are guaranteed to help you make the most of the warmer weather and entertaining at home.</p>
                 <span class="readMore">Read More</span>  
             </section>
-             <section class="twenty">
-                <img class="redLined" src="assets/img/component-02/Image-02.jpg">
-                <h3>A Traditional Christmas Eve, Mark Best Style</h3>
+             <section class="componentSections">
+                <a href="#" target="_blank" rel="noopener noreferrer">
+                  <img class="redLined" id="imClicked" src="assets/img/component-02/Image-02.jpg">
+                </a>
+                <a href="#" target="_blank"" rel="noopener noreferrer">
+                  <h3  id="heardClick">A Traditional Christmas Eve, Mark Best Style</h3>
+                </a>    
                 <p>One of Australia's best chefs and AEG ambassador, Mark Best, shares his favourite Christmas Eve menu which is sure to impress your guests.</p>
                 <span class="readMore">Read More</span>
             </section>
-            <section class="twenty">
-                <img class="redLined" src="assets/img/component-02/Image-03.jpg">
-                <h3>Taking Taste Further</h3>
+            <section class="componentSections">
+                <a href="#" target="_blank" rel="noopener noreferrer">  
+                  <img class="redLined" id="thisClicked" src="assets/img/component-02/Image-03.jpg">
+                </a>
+                <a href="#" target="_blank" rel="noopener noreferrer">  
+                  <h3 id="clicks">Taking Taste Further</h3>
+                </a>  
                 <p>This exclusive cookbook gives you all the know-how you need. We've designed it to make sure you get the most out of our products - and the best out of your food.</p>
                 <span class="readMore">Read More</span>
             </section>
