fix: misplaced meta tag

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta name="keywords" content="AEG, nutrition, gourmet, delicious, food, cookbook, recipe, food blog, blogs">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/site.webmanifest>
-    <link rel="manifest" href="/site.webmanifest">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/site.webmanifest">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="#">
     <meta name="author" content="Nielzon Tolentino">
