build: built with Parcel

--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
                 <a href="#" rel="noopener noreferrer">
                   <img class="redLined" id="clickListener" src="assets/img/component-02/Image-01.jpg">
                 </a>
-                <a href="#" target="_blank" rel="noopener noreferrer">
+                <a href="#"  rel="noopener noreferrer">
                   <h3 id="clicked">Summer Lunch Menu By Mark Best</h3>
                 </a>
                 <p>AEG ambassador Mark Best's summmer eats are guaranteed to help you make the most of the warmer weather and entertaining at home.</p>
                 <span class="readMore">Read More</span>  
             </section>
              <section class="componentSections">
-                <a href="#" target="_blank" rel="noopener noreferrer">
+                <a href="#"  rel="noopener noreferrer">
                   <img class="redLined" id="imClicked" src="assets/img/component-02/Image-02.jpg">
                 </a>
-                <a href="#" target="_blank"" rel="noopener noreferrer">
+                <a href="#"  rel="noopener noreferrer">
                   <h3  id="heardClick">A Traditional Christmas Eve, Mark Best Style</h3>
                 </a>    
                 <p>One of Australia's best chefs and AEG ambassador, Mark Best, shares his favourite Christmas Eve menu which is sure to impress your guests.</p>
                 <span class="readMore">Read More</span>
             </section>
             <section class="componentSections">
-                <a href="#" target="_blank" rel="noopener noreferrer">  
+                <a href="#"  rel="noopener noreferrer">  
                   <img class="redLined" id="thisClicked" src="assets/img/component-02/Image-03.jpg">
                 </a>
-                <a href="#" target="_blank" rel="noopener noreferrer">  
+                <a href="#"  rel="noopener noreferrer">  
                   <h3 id="clicks">Taking Taste Further</h3>
                 </a>  
                 <p>This exclusive cookbook gives you all the know-how you need. We've designed it to make sure you get the most out of our products - and the best out of your food.</p>
